--- a/Web/Personnel/css/common.css
+++ b/Web/Personnel/css/common.css
@@ -124,7 +124,7 @@ div {
     #left_content #user_info {
         background-image: url(../images/manage_r2_c1.jpg);
         background-repeat: no-repeat;
-        height: 55px;
+        height: 10%;
         padding: 10px 0 0 65px;
     }
 
