--- a/Web/Personnel/css/gridview.css
+++ b/Web/Personnel/css/gridview.css
@@ -12,12 +12,14 @@
 	left: 0px;
     z-index:3;
     width:100px;
+    background-color:white;
 }
 .bt_upd2{
     position: sticky;
     left:90px;
     z-index:2;
     width:100px;
+    background-color:white;
     }
 .bt_upd3{
     position: sticky;
@@ -30,11 +32,20 @@
     width: 124px;
     border-radius: 0px;
     display: inline-flexbox;
+    border: 1px solid #e6e6e6;
 }
 .top_select_input {
     height: 25px;
-    border: 1px solid #494f59;
-    border-radius: 0px;
+    border: 1px solid #e6e6e6;
+    border-radius: 2px;
+    margin-left: 10px;
+    text-align:center;
+    width: 52px;
+}
+.top_select_input:hover {
+    height: 25px;
+    border: 1px solid #333;
+    border-radius: 2px;
     margin-left: 10px;
     text-align:center;
     width: 52px;
