--- a/Web/Personnel/css/index2.css
+++ b/Web/Personnel/css/index2.css
@@ -1,49 +1,86 @@
 ﻿.leftNav {
-    float: left;
-    width: 13%;
-    height:auto;
-    background-color: #20222A;
-}
-.leftNav_li_header {
-    height: 60px;
-    width: 100%;
-    line-height: 60px;
-    color: white;
-    font-size: 20px;
-    font-weight: bold;
-    margin-bottom: 5px;
-    box-shadow: -6px 5px 6px 2px black;
-    text-align: center;
+    width: 15%;
+    height: 100%;
     display: flex;
-    justify-content: center;
     align-items: center;
-    font-size:100%;
-    text-decoration : none;
 }
+    .leftNav ul {
+        padding: 0;
+        margin: 0;
+        height: 100%;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+    }
 
 .leftNav_li {
-    /*display: block;*/
-    font-size: 14px;
-    height: 9%;
-    
-    line-height: 270%;
-    color: rgba(255,255,255,0.7);
+    height: 100%;
+    display: flex;
+    align-items: center;
     background-color: #20222A;
-    text-decoration : none
+    cursor: pointer;
+    padding-left: 20px;
+    text-decoration: none;
+    color: rgba(255,255,255,0.7);
+    font-size: 92%;
+    flex-direction: row;
+    justify-content: space-between;
+    padding-right: 20px;
 }
-.left_ul li {
-    list-style-type:none
-    }
 .leftNav_li:hover {
-    display: block;
-    font-size: 14px;
-    height: 7%;
-   line-height: 270%;
-    color: rgba(255,255,255,1);
-    border-left: 5px solid #009688;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    background-color: #20222A;
+    cursor: pointer;
+    padding-left : 15px;
+    text-decoration: none;
+    color: rgba(255,255,255,0.7);
+    font-size: 92%;
+    flex-direction: row;
+    justify-content: space-between;
+    padding-right: 20px;
+    border-left : 5px solid #009688;
+}
+.header_login_info_con {
+    height: 10%;
+    box-shadow: 0px 10px 12px 0 rgba(0, 0, 0, 0.1);
+    background-color: white;
+    z-index: 100;
+    margin-bottom: 1px;
+    display: flex;
+    position: sticky;
+    align-items: center;
+    justify-content: space-between;
+}
+.header_login_info_con div:first-child{
+    width: 20%;
+    display: flex;
+    align-items: center;
+    font-size: 23px;
+    font-weight: bold;
+}
+.header_login_info_con div:last-child {
+    width: 30%;
+    display: flex;
+    justify-content: space-around;
+}
+.bottomDiv {
+    display: flex;
+    height: 87%;
+    justify-content: center;
+    align-items: flex-end;
+    z-index: 10;
+
 }
 li {
-    
-    margin-top:2%;
-    width:95px;
+    height:8.333%;
+}
+.tuichu{
+    text-decoration:none;
+    color:black;
+}
+.tuichu:hover{
+    text-decoration:none;
+    color:blue;
 }
