--- a/Web/finance/web/assets/css/main.css
+++ b/Web/finance/web/assets/css/main.css
@@ -6,7 +6,7 @@
 .input
 {
     outline:none;
-    border: 1px solid #f2f2f2;
+    border: 1px solid #333333;
     height: 38px;
     width: 318px;
     border-radius: 3px;
