--- a/Web/Myadmin/css/common.css
+++ b/Web/Myadmin/css/common.css
@@ -373,13 +373,17 @@ div {
     border-collapse: collapse;
     border: solid 1px #93c2f1;
     font-size: 10pt;
-    background-color: #e4f6ff;
+    background-color:#e7e7e7;
 }
 
 .select_w150 {
-    height: auto;
-    width: 200px;
+     height: 35px;
+    font-size: 15px;
+    width: 350px;
     _margin-top: 3px;
+    border-radius: 5px;
+    border: none;
+         background-color:#eeeeee
 }
 
 .select_w151 {
@@ -414,10 +418,11 @@ div {
 .ui-login-footer {
     position:absolute;
     bottom:0;
-    left:20;
+    left:0;
     /*margin-bottom: 20px;*/
     line-height: 20px;
-    text-align: left;
+    text-align: center;
+        width: 100%;
 }
 
 .ui-btn ui-btn-search {
